<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:onClick="onShowMineralsClicked"
            android:text="@string/show_minerals" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:onClick="onShowLocationsClicked"
            android:text="@string/show_locations" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:onClick="onShowKeySearchClicked"
            android:text="@string/show_keysearch" />
        
        
    </LinearLayout>

</ScrollView>