<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/entry_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:visibility="gone" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/name"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/chemicke_zlozenie"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chemicke_zlozenie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/skupina_nazov"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skupina_nazov"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/krystalograficka_sustava"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/krystalograficka_sustava"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/vryp"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vryp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/tvrdost_od"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvrdost_od"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/tvrdost_do"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvrdost_do"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/stiepatelnost"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stiepatelnost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/hustota_od"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hustota_od"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="6dip"
            android:paddingTop="1dip"
            android:text="@string/hustota_do"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hustota_do"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingTop="1dip"
            android:textSize="13sp"
            android:textStyle="normal" />
    </TableRow>

</LinearLayout>